fix section height and spacing

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -387,10 +387,10 @@
                 padding-top: -165px
 
 .section-2
-    height: 650px
+    height: auto
     width: 100%
     background: $cWhite
-    padding: 3rem 0
+    padding: 10vh 0
 
     .grid
         display: grid
